--- a/user_servic/docker-compose.yml
+++ b/user_servic/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - DB_NAME=recommendation_system
     depends_on:
       - postgres
+      - nats
 
   postgres:
     image: postgres:15
@@ -24,6 +25,11 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+  nats:
+    image: nats:latest
+    ports:
+      - "4222:4222"
 
 volumes:
   postgres_data:
