--- a/user_servic/docker-compose.yml
+++ b/user_servic/docker-compose.yml
@@ -14,6 +14,14 @@ services:
       - postgres
       - nats
 
+  recommendation_service:
+    build: ./recommendation_service
+    ports:
+      - "50052:50052"
+    depend_on:
+      - nats
+      - postgres
+
   postgres:
     image: postgres:15
     container_name: postgres
